...
                  style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
                ),
              ),
              SizedBox(height: 8),
              ReminderCard(
                icon: Icons.local_pharmacy,
                title: 'Isoprinosine',
                subtitle: 'Syrup\n1 Sendok Makan\nSebelum Makan',
                time: '11.00 - 13.00',
                isCurrent: false,
              ),
              ReminderCard(
                icon: Icons.medication,
                title: 'Esomeprazole',
                subtitle: 'Tablet\n1/2 Tablet\nSetelah Makan',
                time: '20.00 - 22.00',
                isCurrent: false,
              ),
            ],
          ),
...
