...

                              deskripsi.text = selectedObat.deskripsi ?? '';
                              gejala.text = selectedObat.gejalaObat ?? '';
                              idObat = selectedObat.idObat;
                              final jenis = selectedObat.jenis;
                              if (jenis == 'Kapsul' ||
                                  jenis == 'Tablet' ||
                                  jenis == 'Obat cair' ||
                                  jenis == 'Cream' ||
                                  jenis == 'Lotion, gel' ||
                                  jenis == 'Suntiokan') {
                                selectedJenisObat = jenis;
                              } else {
...
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(20), // bentuk tombol
                  ),
                  padding: EdgeInsets.symmetric(
                      horizontal: 24, vertical: 12), // ukuran
                ),
                child: Text("Update"),
              ),
            ],
          ),
        ),
      ),
    );
...
