...
                        : pagePasien(
                            initialIndex: 1,
                            pasienSaatIni: widget.pasienSaatIni)),
              );
            },
            child: const Text(
              'Simpan',
              style: TextStyle(color: Colors.white),
            ),
          ),
        ],
      ),
      body: Container(
...
